Overhaul of schedule

--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: index.html
     - text: "Syllabus"
       href: syllabus.html
+    - text: "Schedule"
+      href: schedule.html
     - text: "Resources"
       href: resources.html
     - text: "Lessons"
