--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_PAT
+  github_token: $GITHUB_TOKEN
   local_dir: _site
   on:
     branch: master
