--- a/_site.yml
+++ b/_site.yml
@@ -1,22 +1,30 @@
 name: "EMSE 6574: Programming for Analytics - Fall 2019"
 output_dir: _site
+exclude:
+- DESCRIPTION
+- LICENSE
+new_session: true
 navbar:
   title: EMSE6574
   type: inverse
   left:
     - text: "Syllabus"
+      icon: fa-map-o
       href: index.html
     - text: "Schedule"
       href: schedule.html
     - text: "Resources"
+      icon: fa-book
       href: resources.html
     - text: "Lessons"
+      icon: fa-book
       menu:
         - text: "Getting Started"
           href: getting-started.html
         - text: "Lesson 1"
           href: lesson-1.html
     - text: "Assignments"
+      icon: fa-book
       menu:
         - text: "Assignment 1"
           href: assignment-1.html
@@ -37,4 +45,3 @@ output:
     mathjax: https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
     lib_dir: site_libs
     self_contained: no
-    css: style.css
