--- a/_site.yml
+++ b/_site.yml
@@ -9,25 +9,30 @@ navbar:
   type: inverse
   left:
     - text: "Syllabus"
-      icon: fa-map-o
       href: index.html
     - text: "Schedule"
       href: schedule.html
     - text: "Resources"
-      icon: fa-book
       href: resources.html
     - text: "Lessons"
-      icon: fa-book
       menu:
         - text: "Getting Started"
           href: getting-started.html
         - text: "Lesson 1"
           href: lesson-1.html
     - text: "Assignments"
-      icon: fa-book
       menu:
         - text: "Assignment 1"
           href: assignment-1.html
+  right:
+  - icon: fa-bars
+    menu:
+    - text: Contact
+      icon: fa-envelope
+      href: mailto:jph@gwu.edu
+    - text: GitHub
+      icon: fa-github
+      href: https://github.com/emse6574-gwu/2019-Fall/
 
 output:
   html_document:
