Swapped order of vectors and strings

--- a/_site.yml
+++ b/_site.yml
@@ -25,42 +25,40 @@ navbar:
           href: L1.1-course-introduction.html
         - text: "1.2 - Getting Started"
           href: L1.2-getting-started.html
-        - text: "1.3 - Programming Basics"
-          href: L1.3-programming-basics.html
-        - text: "3.1 - Functions"
-          href: L3.1-functions.html
+        - text: "2 - Programming Basics"
+          href: L2-programming-basics.html
+        - text: "3 - Functions"
+          href: L3-functions.html
         - text: "4.1 - Conditionals"
           href: L4.1-conditionals.html
         - text: "4.2 - Testing & Debugging"
           href: L4.2-testing-debugging.html
-        - text: "5.1 - Loops"
-          href: L5.1-loops.html
-        - text: "6.1 - Strings"
-          href: L6.1-strings.html
-        - text: "7.1 - Vectors"
-          href: L7.1-vectors.html
-        - text: "7.2 - Sorting"
-          href: L7.2-sorting.html
-        - text: "10.1 - Matrices"
-          href: L10.1-matrices.html
-        - text: "11.1 - Data Frames"
-          href: L11.1-data-frames.html
-        - text: "12.1 - Data Visualizations"
-          href: L12.1-data-visualizations.html
-        - text: "14.1 - Monte Carlo Methods"
-          href: L14.1-monte-carlo-methods.html
-        - text: "15.1 - RMarkdown"
-          href: L15.1-rmarkdown.html
+        - text: "5 - Loops"
+          href: L5-loops.html
+        - text: "6 - Vectors"
+          href: L6-vectors.html
+        - text: "7 - Strings"
+          href: L7-strings.html
+        - text: "10 - Matrices"
+          href: L10-matrices.html
+        - text: "11 - Data Frames"
+          href: L11-data-frames.html
+        - text: "12 - Data Visualization"
+          href: L12-data-visualization.html
+        - text: "14 - Monte Carlo Methods"
+          href: L14-monte-carlo-methods.html
+        - text: "15 - RMarkdown"
+          href: L15-rmarkdown.html
     - text: "Assignments"
       menu:
         - text: "HW 1 - Programming Basics"
           href: hw1-programming-basics.html
         - text: "HW 2 - Functions Basics"
           href: hw2-functions.html
-        - text: "HW 3 - Loops & Strings"
-          href: hw3-loops-strings.html
-        - text: "HW 4 - Vectors"
-          href: hw4-vectors.html
+        - text: "HW 3 - Loops & Vectors"
+          href: hw3-loops-vectors.html
+        - text: "HW 4 - Strings"
+          href: hw4-strings.html
         - text: "HW 5 - Matrices"
           href: hw5-matrices.html
         - text: "HW 6 - Data Analysis"
