--- a/_site.yml
+++ b/_site.yml
@@ -21,33 +21,33 @@ navbar:
       href: schedule.html
     - text: "Lessons"
       menu:
-        - text: "Week 1.1 - Course Introduction"
+        - text: "Week 1.1: Course Introduction"
           href: L1.1-course-introduction.html
-        - text: "Week 1.2 - Getting Started"
+        - text: "Week 1.2: Getting Started"
           href: L1.2-getting-started.html
-        - text: "Week 2 - Programming Basics"
+        - text: "Week 2: Programming Basics"
           href: L2-programming-basics.html
-        - text: "Week 3 - Functions"
+        - text: "Week 3: Functions"
           href: L3-functions.html
-        - text: "Week 4.1 - Conditionals"
+        - text: "Week 4.1: Conditionals"
           href: L4.1-conditionals.html
-        - text: "Week 4.2 - Testing & Debugging"
+        - text: "Week 4.2: Testing & Debugging"
           href: L4.2-testing-debugging.html
-        - text: "Week 5 - Loops"
+        - text: "Week 5: Loops"
           href: L5-loops.html
-        - text: "Week 6 - Vectors"
+        - text: "Week 6: Vectors"
           href: L6-vectors.html
-        - text: "Week 7 - Strings"
+        - text: "Week 7: Strings"
           href: L7-strings.html
-        - text: "Week 10 - Matrices"
-          href: L10-matrices.html
-        - text: "Week 11 - Data Analysis 1"
-          href: L11-data-analysis-1.html
-        - text: "Week 12 - Data Analysis 2"
-          href: L12-data-analysis-2.html
-        - text: "Week 14 - Monte Carlo Methods"
+        - text: "Week 11: Data Analysis 1 - Data Frames"
+          href: L10-data-analysis-1-data-frames.html
+        - text: "Week 11: Data Analysis 2 - Data Wrangling"
+          href: L11-data-analysis-2-data-wrangling.html
+        - text: "Week 12: Data Analysis 3 - Data Visualization"
+          href: L12-data-analysis-2-data-visualization.html
+        - text: "Week 14: Monte Carlo Methods"
           href: L14-monte-carlo-methods.html
-        - text: "Week 15 - RMarkdown"
+        - text: "Week 15: RMarkdown"
           href: L15-rmarkdown.html
         - text: "Turtle Graphics"
           href: TurtleGraphics.html
